improve code for use in client code without checkerframework